--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon_star.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EunjinSeo-Portfolio</title>
+
+    <!-- 페이지 제목 -->
+    <meta property="og:title" content="EunjinSeo Portfolio" />
+
+    <!-- 페이지 설명 -->
+    <meta property="og:description" content="서은진의 포트폴리오입니다." />
+
+    <!-- 페이지 URL -->
+    <meta property="og:url" content="https://jinnyjinny12.github.io/" />
+
+    <!-- 미리보기 이미지 (절대 경로) -->
+    <meta
+      property="og:image"
+      content="https://jinnyjinny12.github.io/smaple_thumbnail.jpg"
+    />
+
+    <!-- 이미지의 너비와 높이 (선택 사항) -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- 페이지가 속한 사이트 이름 -->
+    <meta property="og:site_name" content="EunjinSeo Portfolio" />
+
+    <!-- 페이지 유형 (일반 웹 페이지는 website로 설정) -->
+    <meta property="og:type" content="website" />
+    
+    <!-- character animation -->
+    <script src="https://www.goat1000.com/tagcanvas.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
